

*lh-sources-3.10.6 (15 Aug 2013)

  15 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.6.ebuild:
  Bump to latest aufs3 release and Linux releases

  09 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
  Readd linux-3.9

  07 Aug 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.9.10.ebuild,
  -lh-sources-3.9.11.ebuild, -lh-sources-3.10.1.ebuild,
  -lh-sources-3.10.2.ebuild, +lh-sources-3.10.5.ebuild:
  Bump to latest genpatches and aufs release; drop old

*lh-sources-3.10.2 (22 Jul 2013)

  22 Jul 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.11.ebuild,
  +lh-sources-3.10.2.ebuild:
  Version BUmp; Bump to working genpatches for 3.9.11; drop old

*lh-sources-3.9.11 (22 Jul 2013)

  22 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
  Bump to aufs release and genpatches

  14 Jul 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.9.5.ebuild,
  -lh-sources-3.9.6.ebuild, -lh-sources-3.9.6-r1.ebuild,
  -lh-sources-3.9.7.ebuild, -lh-sources-3.9.8.ebuild, -lh-sources-3.9.9.ebuild,
  +lh-sources-3.9.10.ebuild, -lh-sources-3.10.0-r1.ebuild,
  -lh-sources-3.10.0-r2.ebuild, +lh-sources-3.10.1.ebuild:
  Bump to latest genpatches

*lh-sources-3.10.0-r2 (08 Jul 2013)

  08 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.0-r2.ebuild:
  Bump to latest aufs release

*lh-sources-3.9.9 (05 Jul 2013)

  05 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.9.ebuild:
  Bump to linux 3.9.9

  04 Jul 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.5.ebuild,
  lh-sources-3.9.6.ebuild, lh-sources-3.9.6-r1.ebuild, lh-sources-3.9.7.ebuild,
  lh-sources-3.9.8.ebuild, lh-sources-3.10.0-r1.ebuild:
  Fix copy of aufs files

  03 Jul 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.10.0.ebuild,
  +lh-sources-3.10.0-r1.ebuild:
  Drop genpatches to version 1 and add upstream BFQ patches

*lh-sources-3.10.0 (01 Jul 2013)

  01 Jul 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.0.ebuild,