@@ -9,6 +9,8 @@ DIST genpatches-3.10-10.base.tar.xz 168240 SHA256 34fb1edc57b03f84ea734d0336cb1b
 DIST genpatches-3.10-10.extras.tar.xz 16564 SHA256 e844a521c1e7b92728f373b3ca8cca1a5efee5827eaff03adb0b8bf30dff43d3 SHA512 08b40729aaafa452943dc0f049fcb01fea2720ea49f70791d641dbcfebb732e917073225040cc4777a2e7f0b2d2ee7de19f163575d766c3b448bab65379b698c WHIRLPOOL ece78b18724e043d1eb736d688dce758321c634abf2ee7730afd2707e4b7430591741f449843c6935c576acf1660b2f72a4161697bcb57e137c47c91612f2ec0
 DIST genpatches-3.10-11.base.tar.xz 202548 SHA256 e61abdad0f324a6b59cfb774249b444ae3b15c31c4e7612f6d1cc477568d6825 SHA512 65aec5c92d4baa03b1ea9bba6f80b0ed729192e9c9eea08c43e42d1da0169c48b77ff6a5c8d9ebbb3fbc6e02337303d3d865b6236876d1507fd17215312c93c1 WHIRLPOOL 51f7315b488e6f7e5aa9dc64e83856ee43bd9fb942bbe772682a29402b009ca260ccbfe353f90e023fd9bdd953f2b61073cea6803354a600bca34ed68beef5ea
 DIST genpatches-3.10-11.extras.tar.xz 16564 SHA256 2b6f06a71c89c5866615b1a32324f48e26f7e89b2e7473342a1f3451f1e39500 SHA512 1ef0aad40335438cc10163ffd2e7b7730274fff9bc9ce265be6e194fddf8edf7f527d1cbe3c411d6ba79f4fb63f2ee8d54af37fcdf9eb19f5717b6d54ecfce16 WHIRLPOOL 3bb7054fdfcc887fd306a60deda667acdba0b64e0b5c719f807b50b05c67451fae20e6e22fbde59fbd2fff2ab32b21cb91fa58ae05b7a37e9c8b23c28d5cc66a
+DIST genpatches-3.10-13.base.tar.xz 220108 SHA256 cc2c91b479e7dd78e5a793e220b4f4d067d8bb2cd89e84c35f82612eba2a62c2 SHA512 01a1b73bcf6ee1add8a307dd23e39cd0f8ef4798c6ccea42e676ac2dc8f8c2cb3e0c3802d80b5800c9c607f318aa63feaef90ae95375d29e664ce8d9c02ea671 WHIRLPOOL c938d8aa11eb2e701c6bff69301253e896c6c65f5f6c5da3cd1737e376fb2ef50aac5b80e1d0e4110298e17ab4c06db3e395e1e882b189a141412e41d83f3f01
+DIST genpatches-3.10-13.extras.tar.xz 17732 SHA256 aaec50b87931d58b16a0ca1a920e59baee9256fc2465a5ee9a3b9e7dde6d1a81 SHA512 9e30d1ff47600c85d655ffb6f4caefec5140550b517b6c97a5c668e93bc8c0dbd13dc12952f64c8070d3636860bcd41b7d9b428815a5cfed37a1228c646f3785 WHIRLPOOL dd80d37ca76da035dfdc457cd40f5bfb2b8398d604bec8ed0be27619a33ef68af5a02c93d604b6c7b322aab5aec9d9b11b0b2c628c959c562220082b18c65b72
 DIST genpatches-3.9-17.base.tar.xz 290752 SHA256 66f3fc418d7faee9809d35df9e4c17da8d84286c8b48e0e5149fa626af2c7a2d SHA512 5a849ad1b2259a5ba45698942ef224231b664cff7bcc6a02b2fe94e317a961ceb1198b6a9c0550bafdc53671fd4db5d323c3f0efb24d3956e8297e32f9369d25 WHIRLPOOL 1cd46b907bc07d130199085c58b5793681577921542b099241aa937cd95dff0f18c91ea8a6eda52e3d1ae2928709678947de4d1f5266aeafe6406a785ec1d75b
 DIST genpatches-3.9-17.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
